# token-usage-tracker

./: .gitignore  Cargo.toml  LICENSE  README.md  pricing_default.json
.github/workflows/: ci.yml  release.yml
docs/superpowers/: codex-execution-prompt.md
docs/superpowers/plans/: 2026-07-13-token-tracker-personal-widget.md  2026-07-13-token-usage-tracker.md
docs/superpowers/specs/: 2026-07-13-token-tracker-design.md  2026-07-13-token-usage-tracker-design.md
src/: alerts.rs  discovery.rs  history.rs  main.rs  model.rs  parse_claude.rs  parse_codex.rs  paths.rs  pricing.rs  quota.rs  settings.rs  tail.rs  tray.rs  ui.rs  watch.rs  worker.rs
