[package]
name = "token-tracker"
version = "0.3.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
eframe = "0.35.0"
notify = "8"
notify-rust = "4.18.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tray-icon = "0.24.1"
ureq = { version = "3", default-features = false, features = ["rustls", "json", "gzip"] }
